--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@types/react-dom": "^17.0.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.2",
+    "typescript-fsa": "^3.0.0",
+    "typescript-fsa-reducers": "^1.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.23",
+    "@types/redux-thunk": "^2.1.0",
+    "redux-devtools": "^3.7.0"
   }
 }
